--- a/Coffee.html
+++ b/Coffee.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Coffee Website / CodingBangladesh </title>
+  <title>Coffee Website || CodingMaria </title>
+  <link rel="icon" href="pic/Coffee-shop/images/coffee-hero-section.png" style="color: blanchedalmond;" type="image/x-icon">
    <!--Linking Swipper CSS-->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
    <!--Linking Font Awesome for icons-->
