--- a/Portfolio.html
+++ b/Portfolio.html
@@ -3,25 +3,48 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PORTFOLIO</title>
+  <title>PORTFOLIO || CodingMaria</title>
+  <link rel="icon" href="pic/its me2.png" type="image/x-icon">
   <link rel="stylesheet" href="Portfolio.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
   <script src="https://unpkg.com/typed.js@2.0.15/dist/typed.umd.js"></script>
 </head>
 <body>
-<header class="header">
-  <a href="#" class="logo">Portfolio</a>
-  <nav class="navbar" id="navbar">
-    <a href="#home" style="--i:1">Home</a>
-    <a href="#about" style="--i:2">About</a>
-    <a href="#service" style="--i:3">Service</a>
-    <a href="#skills" style="--i:4">Skill</a>
-    <a href="#portfolio" style="--i:5">Portfolio</a>
-    <a href="#contact" style="--i:6">Contact</a>
-  </nav>
-  <div id="menu-icon" class="bx bx-menu"></div>
-</header>
+<header>
+    <nav class="navbar section-content">
+      <a href="#" class="nav-logo">
+        <h2 class="logo-text">Portfolio</h2>
+      </a>
+      
+      <ul class="nav-menu">
+        <button id="menu-close-button" class="fas fa-times" title="Close Menu"></button>
+        <li class="nav-item">
+          <a href="#" class="nav-link">Home</a>
+        </li>
+
+        <li class="nav-item">
+          <a href="#about" class="nav-link">About</a>
+        </li>
+
+        <li class="nav-item">
+          <a href="#service" class="nav-link">Service</a>
+        </li>
+
+        <li class="nav-item">
+          <a href="#skills" class="nav-link">Skills</a>
+        </li>
+
+        <li class="nav-item">
+          <a href="#portfolio" class="nav-link">Portfolio</a>
+        </li>
+
+        <li class="nav-item">
+          <a href="#contact" class="nav-link">Contact</a>
+        </li>
+      </ul>
+      <button id="menu-open-button" class="fas fa-bars" title="Open Menu"></button>
+  </header>
   <section class="home" id="home">
    <div class="home-content">
     <h3>Hello there, it's me</h3>
@@ -47,54 +70,54 @@
    </div>
    <div class="home-image">
     <div class="img-box">
-      <img src="pic/about2.png" alt="">
+      <img src="pic/its me2.png" alt="">
     </div>
    </div>
   </section>
   <section class="about-section" id="about">
-      <div class="section-content">
-        <div class="about-image-wrapper">
-          <img src="pic/about2.png" alt="About us" class="about-image">
-        </div>
-        <div class="about-text">
-          <h2 class="section-title">About<span>Me</span></h2>
-          <h4>Full Stack Developer</h4>
-          <p class="text">Hi, I'm Mst Jannatul Tajrin (Maria), a passionate Full-Stack Web Developer with expertise in HTML, CSS, JavaScript, React.js, Node.js, Java, Python, MongoDB, and MySQL. With a strong foundation in both front-end and back-end development, I specialize in building responsive, 
-            high-performance, and scalable applications that enhance user experience and drive innovation.
-          </p>
-          <br>
-          <span class="span">Experience:</span>
-          <p class="text">
+    <div class="section-content">
+      <div class="about-image-wrapper">
+        <img src="pic/its me2.png" alt="About us" class="about-image">
+      </div>
+      <div class="about-text">
+        <h2 class="section-title">About<span>Me</span></h2>
+        <h4>Full Stack Developer</h4>
+        <p class="text">Hi, I'm Mst Jannatul Tajrin (Maria), a passionate Full-Stack Web Developer with expertise in HTML, CSS, JavaScript, React.js, Node.js, Java, Python, MongoDB, and MySQL. With a strong foundation in both front-end and back-end development, I specialize in building responsive, 
+          high-performance, and scalable applications that enhance user experience and drive innovation.
+        </p>
+        <br>
+        <span class="span">Experience:</span>
+        <p class="text">
           With half an years of experience in web development, I have worked on diverse projects ranging from dynamic web applications to scalable backend systems. My journey includes:
           Developing modern web applications using React.js and Node.js, ensuring seamless performance and great UI/UX.
           Designing and optimizing databases with MongoDB and MySQL to handle large-scale data efficiently.
           Building secure and efficient RESTful APIs to integrate applications and enhance functionality.
           Collaborating with cross-functional teams to create innovative digital solutions.
-          </p>
-          <br>
-          <span class="span">My Passion & Vision:</span>
-          <p class="text">
+        </p>
+        <br>
+        <span class="span">My Passion & Vision:</span>
+        <p class="text">
           I'm driven by a passion for building intuitive and impactful web applications that solve real-world problems. 
           I believe in writing clean, maintainable code and continuously learning new technologies to stay ahead in the ever-evolving tech landscape.
-          </p>
-          <br>
-          <p class="text">
+        </p>
+        <br>
+        <p class="text">
           Let's Connect! 
-          </p>
-          <p class="text">I'm always open to new challenges and collaborations.</p>
-          <p class="text">Whether it's a new project, an exciting idea, </p>
-          <p class="text">or just tech talk—let's build something amazing together!</p>
-          <a href="#" class="btn-box">More about me</a>
-        </div>
+        </p>
+        <p class="text">I'm always open to new challenges and collaborations.</p>
+        <p class="text">Whether it's a new project, an exciting idea, </p>
+        <p class="text">or just tech talk—let's build something amazing together!</p>
+        <a href="#" class="btn-box">More about me</a>
       </div>
-    </section>
+    </div>
+  </section>
   <section  id="service">
     <div class="service" >
       <div class="container">
         <h1 class="sub-title">My<span>Services</span></h1>
         <div class="service-list">
           <div>
-            <i class='bx bx-code' style='color: #805e01' ></i>
+            <i class='bx bx-code'></i>
             <h2>UI/UX Design</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
               Architecto culpa quia fugit aliquid pariatur modi aspernatur 
@@ -104,7 +127,7 @@
               <a href="#" class="read">Learn More</a>
           </div>
           <div >
-            <i class='bx bx-crop' style='color: #805e01 '></i>
+            <i class='bx bx-crop' ></i>
             <h2>UI/UX Design</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 Architecto culpa quia fugit aliquid pariatur modi aspernatur 
@@ -114,7 +137,7 @@
               <a href="#" class="read">Learn More</a>
           </div>
           <div >
-            <i class='bx bxl-apple' style='color:#805e01' ></i>
+            <i class='bx bxl-apple' ></i>
             <h2>UI/UX Design</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 Architecto culpa quia fugit aliquid pariatur modi aspernatur 
@@ -212,7 +235,7 @@
         <h3>Professional Skills</h3>
         <div class="professional">
           <div class="box">
-            <div class="circle" data-dots="80" data-percent="90">
+            <div class="circle" data-dots="80" data-percent="90" >
               <div class="percent-text"><big>90%</big></div>
             </div>
             <br>
